--- a/app/src/main/res/layout/gallery_item_layout.xml
+++ b/app/src/main/res/layout/gallery_item_layout.xml
@@ -24,20 +24,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            android:contentDescription="@string/galleryimage"
             android:scaleType="fitCenter"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:setImageFromUrl="@{uiModel.imageUrl}"
-            android:src="@drawable/ic_launcher_background"/>
+            app:setImageFromUrl="@{uiModel.imageUrl}" />
 
         <TextView
             android:id="@+id/galleryItemTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{uiModel.imageCreator}"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:maxLines="1"
+            android:text="@{uiModel.imageCreator}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/galleryImage" />
